// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";

package metadata.types;

option go_package = "openpitrix.io/openpitrix/pkg/pb/metadata/types;pbtypes";

import "google/protobuf/wrappers.proto";
import "metadata/types/confd.proto";

message DroneId {
	string id = 1;
}

message DroneIdList {
	repeated string id_list = 1;
}

message DroneConfig {
	string id = 1;
	string host = 2;
	int32 listen_port = 3;
	string cmd_info_log_path = 4;
	string confd_self_host = 5;
	string log_level = 6;
}

message DroneEndpoint {
	string frontgate_id = 1;
	string drone_ip = 2;
	int32 drone_port = 3;
}

message SetDroneConfigRequest {
	DroneEndpoint endpoint = 1;
	DroneConfig config = 2;
}

message RunCommandOnDroneRequest {
	DroneEndpoint endpoint = 1;
	string command = 2;
	int32 timeout_seconds = 3;
}

message DistributeDroneRequest {
	google.protobuf.StringValue pilot_version = 1;
	google.protobuf.StringValue frontgate_address = 2;
}
